# ALF

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.dev  Makefile  README.md  alf_gui.py  doh_experiment.py  example.trapcap  nemea_module_doh.py  requirements.dev.txt  requirements.nemea.txt  requirements.txt  strategy_visualization.ipynb
.github/workflows/: ubuntu_build_test.yaml
ALF/: .gitignore  CMakeLists.txt
ALF/include/alf/: model.hpp  query.hpp  state_manager.hpp  strategy.hpp
ALF/src/: model.cpp  query.cpp  state_manager.cpp  strategy.cpp
ALF/test/: CMakeLists.txt  basic_strategies.test.cpp  flows_test.db  model_wrapper.test.cpp  pool_manager.test.cpp  test.db
alf/: anotator.py  context_manager.py  d_manager.py  engine.py  evaluator.py  input_manager.py  ip_flow.py  ml_model.py  postprocess.py  preprocess.py  processor.py  provider.py  query_strategy.py
alf/al_module/: pool_model.py
alf/al_module/query_strategies/: anomaly_based.py  base.py  random.py  uncertainty.py
alf/predictor_module/: predict_loop.py  production_model.py
alf/stream/: production_model.py
alf/stream_sampler/: README.md  configure.ac  stream_sampler.c
alf/tools/: loader.py
conf/: doh_D0.csv
docs/: alf.rst  conf.py  index.rst  tests.html
include/alf/: model.hpp  pool_manager.hpp  query.hpp  state_manager.hpp  strategy.hpp  util.hpp
include/annotator/: annotator_runner.hpp
include/sampler/: sampler.hpp
src/: annotator_runner.cpp  model.cpp  pool_manager.cpp  query.cpp  state_manager.cpp  strategy.cpp
test/: CMakeLists.txt  basic_strategies.test.cpp  example_dataset.arff  model_wrapper.test.cpp  pool_manager.test.cpp  test.db
tests/: test_context_manager.py  test_dmanager.py  test_ml_model.py  test_query_strategy.py  test_x_input_manager.py  test_x_preprocess_and_anot.py
tests/example_trapcaps/: data.trapcap.202112021705  data.trapcap.202112021735  data.trapcap.202112021745  data.trapcap.202112022015  data.trapcap.202112031435  data.trapcap.202112031450  data.trapcap.202112071150
tests/test_files/: test.csv  test_blacklist.txt  test_d0.csv
